--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css" media="all">
+    <link rel="stylesheet" href="test.css" media="all">
     <title></title>
 </head>
 <body>
