--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="test.css" media="all">
+    <link rel="stylesheet" href="result.css" media="all">
     <title></title>
 </head>
 <body>
@@ -11,6 +11,7 @@
     <p class="bg-primary">!</p>
     <div class="container"></div>
     <div class="grid"></div>
+    <div class="card"></div>
 
 </body>
 </html>
